--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    background: #000;
+    background: #000000;
 }
 
 *{
@@ -114,6 +114,7 @@ body{
     background-size: cover;
     background-position: center;
     position: relative;
+    bottom: 0;
 }
 
 .hero::after{
@@ -121,12 +122,13 @@ body{
     display: block;
     position: absolute;
     width: 100%;
-    height: 100%;
-    background: linear-gradient(0deg, rgba(1,1,5,3) 3%, rgba(255,255,255,0)25%);
+    height: 30%;
+    background: linear-gradient(0deg, rgba(1,1,5,3) 8%, rgba(255,255,255,0)55%);
+    bottom: 0;
 }
 
 .hero .content{
-    padding: 1.5rem;
+    padding: 1.5rem 5%;
     max-width: 60rem;
 }
 
@@ -149,6 +151,17 @@ body{
     text-shadow: 1px 1px 3cap rgba(1, 1, 3, 0.5);
     /* mix-blend-mode: difference; */
     color: #846c98;
+}
+
+.hero .content .cta{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 1rem 3rem;
+    font-size: 1.4rem;
+    color: #ffffff;
+    background-color: #000000;
+    border-radius: 0.5rem;
+    box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
 
 .about, .contact{
@@ -183,8 +196,12 @@ body{
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
     font-weight: 300;
+    color: #0ffcbe;
 }
 
+.about .row span{
+    color:#ffcc00;
+}
 .about .row .content p{
     margin-bottom: 0.8rem;
     font-size: 1.1rem;
@@ -194,6 +211,7 @@ body{
 
 .contact h2{
     margin-bottom: 1rem;
+    display: block;
 }
 
 .contact p{
@@ -235,6 +253,7 @@ body{
     color: #fff;
     background-color: #ca0000;
     cursor: pointer;
+    border-radius: 4.5rem;
 }
 
 footer{
@@ -251,6 +270,7 @@ footer .socials {
 footer .socials a{
     color: #ffffff;
     margin: 1rem 1.3rem;
+    padding-bottom: 0.4rem;
 }
 
 footer .socials a:hover,footer .links a:hover{
