--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ body{
     color: #846c98;
 }
 
-.hero .content .cta{
+.hero .content a {
     margin-top: 1rem;
     display: inline-block;
     padding: 1rem 3rem;
@@ -162,6 +162,12 @@ body{
     background-color: #000000;
     border-radius: 0.5rem;
     box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+.hero .content a:hover{
+    background-color: #f53f3f;
+    border: none;
+    color: black;
 }
 
 .about, .contact{
@@ -179,7 +185,7 @@ body{
 }
 
 .about .row .about-img{
-    flex: 1 1 4.5rem;
+    flex: 2 2 4rem;
 }
 
 .about .row .about-img img{
@@ -194,7 +200,7 @@ body{
 .about .row .content h3{
     font-size: 3rem;
     margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
+    margin-top: 0.4rem;
     font-weight: 300;
     color: #0ffcbe;
 }
@@ -204,9 +210,14 @@ body{
 }
 .about .row .content p{
     margin-bottom: 0.8rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 100;
     line-height: 1.6;
+}
+
+.contact{
+    padding: 15rem;
+    padding-top: 10rem;
 }
 
 .contact h2{
@@ -245,7 +256,7 @@ body{
     color: #fff;
 }
 
-.contact .row form .btn{
+.contact .row form button{
     margin-top: 3rem;
     display: inline-block;
     padding: 1rem 3rem;
@@ -254,6 +265,11 @@ body{
     background-color: #ca0000;
     cursor: pointer;
     border-radius: 4.5rem;
+}
+
+.contact .row form button:hover{
+    background-color: #fff;
+    color: black;
 }
 
 footer{
