--- a/style.css
+++ b/style.css
@@ -312,3 +312,25 @@ footer .credit a{
     color: #000;
     font-weight: 800;
 }
+
+
+@media (max-width: 1366px){
+    html{
+        font-size: 75%;
+    }
+}
+
+@media (max-width: 768px){
+    html{
+        font-size: 62.5%;
+    }
+    #hamburger-menu {
+        display: inline-block;
+      }
+}
+
+@media (max-width: 450px){
+    html{
+        font-size: 55%;
+    }
+}
